# Work-Review

./: CHANGELOG.md  Live2DRemoval.test.js  README.md  cargoToml.test.js  index.html  package-lock.json  package.json  releaseWorkflow.test.js  tailwind.config.js  tauriDevHost.test.js  vite.config.js
crates/core/: Cargo.toml
crates/core/src/: activity_classifier.rs  categorize.rs  database.rs  error.rs  lib.rs  policy.rs  privacy.rs
crates/core/src/analysis/: hourly.rs  mod.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/skills-engine/: Cargo.toml
crates/skills-engine/src/: adaptive.rs  engine.rs  executor.rs  lib.rs  model.rs  registry.rs  state.rs
docs/: WINDOWS_OCR.md
scripts/: setup-codesign.sh
scripts/gnome-shell/work-review-avatar-input@workreview.app/: extension.js  metadata.json
src/: AWorkflowTheme.test.js  App.nodeRoute.test.js  App.svelte  App.sync.test.js  AppShellVisual.test.js  I18nFeedback.test.js  I18nLayout.test.js  I18nLocaleFlow.test.js  IdleDetectionFlow.test.js  SurfaceConsistency.test.js  UpdaterFlow.test.js
src-tauri/: Cargo.toml  build.rs  entitlements.plist  linuxWaylandSupport.test.js  tauri.conf.json
src-tauri/scripts/: patch-info-plist.sh
src-tauri/src/: activity_classifier.rs  avatar_engine.rs  avatar_followup.rs  avatar_input.rs  commands.rs  config.rs  database.rs  error.rs  idle_detector.rs  linux_session.rs  localhost_api.rs  main.rs  node_gateway.rs  ocr_logger.rs  privacy.rs  screenshot.rs  storage.rs  work_intelligence.rs
src-tauri/src/analysis/: mod.rs
src/lib/components/: ActivityHourlyChart.test.js  AppUsageChart.svelte  AppUsageChart.test.js  ConfirmDialog.svelte  LocalizedDatePicker.svelte  (+5 more)
src/routes/: Overview.svelte  Overview.test.js  OverviewEditorial.test.js
(+47 files in other folders)
