[package]
name = "work-review-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
base64 = "0.21"
once_cell = "1.19"
image = "0.25.9"
