[package]
name = "work-review-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "work-review-mcp-server"
path = "src/main.rs"

[dependencies]
work-review-core = { path = "../core" }
work-review-skills-engine = { path = "../skills-engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }
