[package]
name = "work-review-skills-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
work-review-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
regex = "1.10"
